<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="144dp"
        android:background="#E0E0E0"
        android:gravity="end"
        android:padding="16dp"
        android:text="@string/zero"
        android:textColor="#000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_margin="16dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult">

        <Button
            android:id="@+id/buttonCE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/clearEntry"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/clear"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonBS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/backspace"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/divide"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/seven"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/eight"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/nine"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonMul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/multiply"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/four"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/five"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/six"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/subtract"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/one"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/two"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/three"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/add"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonNeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/negate"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:layout_columnSpan="2"
            android:background="#D3D3D3"
            android:text="@string/zero"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="4dp"
            android:background="#D3D3D3"
            android:text="@string/equals"
            android:textSize="18sp" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>